force-app/main/default/objects/Account/fields/Apparel_Type__c.field-meta.xml
<CustomField>
    <fullName>Apparel_Type__c</fullName>
    <label>Apparel Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shirts</fullName>
            </value>
            <value>
                <fullName>Tank-tops</fullName>
            </value>
            <value>
                <fullName>Shorts</fullName>
            </value>
            <value>
                <fullName>Hoodie</fullName>
            </value>
            <value>
                <fullName>Pants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>