force-app/main/default/objects/Account/fields/Equipment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Amount__c</fullName>
    <label>Equipment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>