force-app/main/default/objects/Account/fields/Equipment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Needed__c</fullName>
    <label>Equipment Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>