force-app/main/default/objects/Account/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dumbbell</fullName>
            </value>
            <value>
                <fullName>Kettlebell</fullName>
            </value>
            <value>
                <fullName>Barbell</fullName>
            </value>
            <value>
                <fullName>Machine</fullName>
            </value>
            <value>
                <fullName>Plates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>