force-app/main/default/objects/Account/fields/Maintenance_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Schedule__c</fullName>
    <label>Maintenance Schedule</label>
    <type>DateTime</type>
</CustomField>