force-app/main/default/objects/Account/fields/Meal_Type__c.field-meta.xml
<CustomField>
    <fullName>Meal_Type__c</fullName>
    <label>Meal Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Beef</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Seafood</fullName>
            </value>
            <value>
                <fullName>Acai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>