force-app/main/default/objects/Account/fields/Sizes__c.field-meta.xml
<CustomField>
    <fullName>Sizes__c</fullName>
    <label>Sizes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X-Small</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>