force-app/main/default/objects/Account/fields/Subscription_Service__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Service</label>
    <type>Checkbox</type>
</CustomField>