force-app/main/default/objects/Account/fields/Supplement_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Type__c</fullName>
    <label>Supplement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vitamins</fullName>
            </value>
            <value>
                <fullName>Protein</fullName>
            </value>
            <value>
                <fullName>Drinks</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>