force-app/main/default/objects/Account/recordTypes/Apparel_Account.recordType-meta.xml
<RecordType>
    <fullName>Apparel_Account</fullName>
    <active>true</active>
    <description>To track the apparel accounts</description>
    <label>Apparel Account</label>
</RecordType>