force-app/main/default/objects/Account/recordTypes/Gym_Account.recordType-meta.xml
<RecordType>
    <fullName>Gym_Account</fullName>
    <active>true</active>
    <description>To track branches</description>
    <label>Gym Account</label>
</RecordType>