force-app/main/default/objects/Account/recordTypes/Machinery_Account.recordType-meta.xml
<RecordType>
    <fullName>Machinery_Account</fullName>
    <active>true</active>
    <description>To track the accounts that sell machines</description>
    <label>Machinery Account</label>
</RecordType>