force-app/main/default/objects/Account/recordTypes/Maintenance_Account.recordType-meta.xml
<RecordType>
    <fullName>Maintenance_Account</fullName>
    <active>true</active>
    <description>To track the maintenance services done in gym locations</description>
    <label>Maintenance Account</label>
</RecordType>