force-app/main/default/objects/Account/recordTypes/Nutrition_Account.recordType-meta.xml
<RecordType>
    <fullName>Nutrition_Account</fullName>
    <active>true</active>
    <description>To track nutrition companies</description>
    <label>Nutrition Account</label>
</RecordType>